// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common components Home Page Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="ftco-section"
      >
        <div
          class="container"
        >
          <div
            class="row justify-content-center mb-5 pb-2"
          >
            <div
              class="col-md-8 text-center heading-section ftco-animate fadeInUp ftco-animated"
            >
              <h2
                class="mb-4"
              >
                IELTS
              </h2>
              <p>
                The International English Language Testing System (IELTS) is a globally recognized English language proficiency test. It is designed to assess the language skills of individuals who plan to study, work, or migrate to countries where English is the primary language of communication.
              </p>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    Reading
                  </h3>
                  <span
                    class="position mb-2"
                  >
                    Cambridge 6-17
                  </span>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/examTestsList/0/0"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    Writing
                  </h3>
                  <span
                    class="position mb-2"
                  >
                    Cambridge 6-17
                  </span>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/examTestsList/0/1"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    Speaking
                  </h3>
                  <span
                    class="position mb-2"
                  >
                    Cambridge 6-17
                  </span>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/examTestsList/0/2"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    Listening
                  </h3>
                  <span
                    class="position mb-2"
                  >
                    Cambridge 6-17
                  </span>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/examTestsList/0/3"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section"
      >
        <div
          class="container"
        >
          <div
            class="row justify-content-center mb-5 pb-2"
          >
            <div
              class="col-md-8 text-center heading-section ftco-animate fadeInUp ftco-animated"
            >
              <h2
                class="mb-4"
              >
                Lessons
              </h2>
              <p>
                English lessons offer an immersive and interactive learning experience, equipping students with the essential skills and confidence to communicate effectively in the global language of business, travel, and academia.
              </p>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    Pronunnciation
                  </h3>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/lessonList/0"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    Grammar
                  </h3>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/lessonList/1"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    General
                  </h3>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/lessonList/2"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
            >
              <div
                class="staff shadow rounded"
              >
                <div
                  class="img-wrap d-flex align-items-stretch"
                >
                  <div
                    class="img align-self-stretch"
                    style="background-image: url(images/CamBooks.jpg);"
                  />
                </div>
                <div
                  class="text pt-3 text-center"
                >
                  <h3>
                    IELTSTips
                  </h3>
                  <div
                    class="faded"
                  >
                    <p />
                    <ul
                      class="ftco-social text-center"
                    >
                      <li
                        class="ftco-animate fadeInUp ftco-animated"
                      >
                        <a
                          href="/lessonList/3"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="FormatListBulletedIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                            />
                          </svg>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <section
      class="ftco-section"
    >
      <div
        class="container"
      >
        <div
          class="row justify-content-center mb-5 pb-2"
        >
          <div
            class="col-md-8 text-center heading-section ftco-animate fadeInUp ftco-animated"
          >
            <h2
              class="mb-4"
            >
              IELTS
            </h2>
            <p>
              The International English Language Testing System (IELTS) is a globally recognized English language proficiency test. It is designed to assess the language skills of individuals who plan to study, work, or migrate to countries where English is the primary language of communication.
            </p>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  Reading
                </h3>
                <span
                  class="position mb-2"
                >
                  Cambridge 6-17
                </span>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/examTestsList/0/0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  Writing
                </h3>
                <span
                  class="position mb-2"
                >
                  Cambridge 6-17
                </span>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/examTestsList/0/1"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  Speaking
                </h3>
                <span
                  class="position mb-2"
                >
                  Cambridge 6-17
                </span>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/examTestsList/0/2"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  Listening
                </h3>
                <span
                  class="position mb-2"
                >
                  Cambridge 6-17
                </span>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/examTestsList/0/3"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      class="ftco-section"
    >
      <div
        class="container"
      >
        <div
          class="row justify-content-center mb-5 pb-2"
        >
          <div
            class="col-md-8 text-center heading-section ftco-animate fadeInUp ftco-animated"
          >
            <h2
              class="mb-4"
            >
              Lessons
            </h2>
            <p>
              English lessons offer an immersive and interactive learning experience, equipping students with the essential skills and confidence to communicate effectively in the global language of business, travel, and academia.
            </p>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  Pronunnciation
                </h3>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/lessonList/0"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  Grammar
                </h3>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/lessonList/1"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  General
                </h3>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/lessonList/2"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated"
          >
            <div
              class="staff shadow rounded"
            >
              <div
                class="img-wrap d-flex align-items-stretch"
              >
                <div
                  class="img align-self-stretch"
                  style="background-image: url(images/CamBooks.jpg);"
                />
              </div>
              <div
                class="text pt-3 text-center"
              >
                <h3>
                  IELTSTips
                </h3>
                <div
                  class="faded"
                >
                  <p />
                  <ul
                    class="ftco-social text-center"
                  >
                    <li
                      class="ftco-animate fadeInUp ftco-animated"
                    >
                      <a
                        href="/lessonList/3"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatListBulletedIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5zm0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5zM7 19h14v-2H7v2zm0-6h14v-2H7v2zm0-8v2h14V5H7z"
                          />
                        </svg>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`Common components Login Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <script
      id="facebook-jssdk"
      src="https://connect.facebook.net/en_US/sdk.js"
    />
    <div>
      <div>
        <section
          class="hero-wrap hero-wrap-2"
          data-stellar-background-ratio="0.5"
          style="background-image: url(images/bg_1.jpg);"
        >
          <div
            class="overlay"
          />
          <div
            class="container"
          >
            <div
              class="row no-gutters slider-text align-items-center justify-content-center"
            >
              <div
                class="col-md-9 text-center"
              >
                <h1
                  class="mb-2 bread"
                >
                  Login
                </h1>
                <p
                  class="breadcrumbs"
                >
                  <span
                    class="mr-2"
                  >
                    <a
                      href="/"
                    >
                      Home 
                      <i
                        class="ion-ios-arrow-forward"
                      />
                    </a>
                  </span>
                   
                  <span>
                    Login 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </span>
                </p>
              </div>
            </div>
          </div>
        </section>
        <section
          class="ftco-section ftco-no-pt ftco-no-pb contact-section"
        >
          <div
            class="container"
          >
            <div
              class="h-100 d-flex align-items-center justify-content-center flex-column"
            >
              <div
                class="col-md-4 pt-4 order-md-last bg-light"
              >
                <form
                  class="was-validated"
                >
                  <div
                    class="form-group"
                  >
                    <input
                      class="form-control"
                      placeholder="User Name"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="form-group"
                  >
                    <input
                      class="form-control"
                      placeholder="Password"
                      type="password"
                      value=""
                    />
                  </div>
                  <div
                    class="form-group text-right"
                  >
                    <input
                      class="btn btn-primary py-2 px-3"
                      type="submit"
                      value="Login"
                    />
                  </div>
                </form>
              </div>
              <div
                class="col-md-4 order-md-last bg-light d-flex align-items-center justify-content-center"
              >
                <span>
                  Not having an account?
                </span>
                <a
                  class="nav-link"
                  href="/register"
                >
                  Sign Up
                </a>
              </div>
              <div
                class="col-md-4 pt-4 pb-4 order-md-last bg-light border-top d-flex align-items-center justify-content-center"
              >
                <div>
                  <button
                    class="btn btn-primary py-2 px-3"
                    type="button"
                  >
                    Facebook Sign in
                  </button>
                </div>
                <div
                  class="pl-4"
                >
                  <div
                    style="height: 40px;"
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <script
      defer=""
      nonce="undefined"
      src="https://accounts.google.com/gsi/client"
    />
  </body>,
  "container": <div>
    <div>
      <section
        class="hero-wrap hero-wrap-2"
        data-stellar-background-ratio="0.5"
        style="background-image: url(images/bg_1.jpg);"
      >
        <div
          class="overlay"
        />
        <div
          class="container"
        >
          <div
            class="row no-gutters slider-text align-items-center justify-content-center"
          >
            <div
              class="col-md-9 text-center"
            >
              <h1
                class="mb-2 bread"
              >
                Login
              </h1>
              <p
                class="breadcrumbs"
              >
                <span
                  class="mr-2"
                >
                  <a
                    href="/"
                  >
                    Home 
                    <i
                      class="ion-ios-arrow-forward"
                    />
                  </a>
                </span>
                 
                <span>
                  Login 
                  <i
                    class="ion-ios-arrow-forward"
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </section>
      <section
        class="ftco-section ftco-no-pt ftco-no-pb contact-section"
      >
        <div
          class="container"
        >
          <div
            class="h-100 d-flex align-items-center justify-content-center flex-column"
          >
            <div
              class="col-md-4 pt-4 order-md-last bg-light"
            >
              <form
                class="was-validated"
              >
                <div
                  class="form-group"
                >
                  <input
                    class="form-control"
                    placeholder="User Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-group"
                >
                  <input
                    class="form-control"
                    placeholder="Password"
                    type="password"
                    value=""
                  />
                </div>
                <div
                  class="form-group text-right"
                >
                  <input
                    class="btn btn-primary py-2 px-3"
                    type="submit"
                    value="Login"
                  />
                </div>
              </form>
            </div>
            <div
              class="col-md-4 order-md-last bg-light d-flex align-items-center justify-content-center"
            >
              <span>
                Not having an account?
              </span>
              <a
                class="nav-link"
                href="/register"
              >
                Sign Up
              </a>
            </div>
            <div
              class="col-md-4 pt-4 pb-4 order-md-last bg-light border-top d-flex align-items-center justify-content-center"
            >
              <div>
                <button
                  class="btn btn-primary py-2 px-3"
                  type="button"
                >
                  Facebook Sign in
                </button>
              </div>
              <div
                class="pl-4"
              >
                <div
                  style="height: 40px;"
                />
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
